<resources>
    <string name="app_name">Proj_2</string>
    <string name="enter_username">Enter UserName</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_to_mobile2app">Welcome to Mobile2APP</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_firstName" />
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="create_account">Create Account</string>
    <string name="instock_app">InStock App</string>
    <string name="inventory_icon">Inventory Icon</string>
    <string name="back_to_login">Back to Login</string>
    <string name="inventory">Inventory</string>
    <string name="add_Stock" />
    <string name="add_item">Add Item</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_item">Enter Item</string>
    <string name="back_to_inventory">Back to Inventory</string>
    <string name="item_name">item name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">delete</string>
    <string name="textview">TextView</string>
    <string name="items">Items</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="edit_quantity">Edit Quantity</string>
    <string name="delete_view">Delete</string>
</resources>