<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E4E4"
    tools:context=".StockActivity">

    <TextView
        android:id="@+id/Inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00796B"
        android:gravity="center_horizontal"
        android:padding="25dp"
        android:text="@string/inventory"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="388dp"
        android:layout_height="600dp"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Inventory"
        app:layout_constraintVertical_bias="0.56" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00796B"
        android:clickable="true"
        android:contentDescription="@string/add_item"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textItemVier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/items"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/textQuantityView"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inventory"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textQuantityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="9dp"
        android:text="@string/quantity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/editQuantity"
        app:layout_constraintTop_toBottomOf="@+id/Inventory" />

    <TextView
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="9dp"
        android:text="@string/edit_quantity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/deleteView"
        app:layout_constraintTop_toBottomOf="@+id/Inventory"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/deleteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="9dp"
        android:text="@string/delete_view"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inventory"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>