<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E4E4"
    tools:context=".CUsersActivity">

    <TextView
        android:id="@+id/idHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="25dp"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/idEdtPassword"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/idEdtUserName"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <EditText
        android:id="@+id/idEdtUserName"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/idHeader"
        android:autofillHints="username"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idEdtFirstName"
        app:layout_constraintVertical_bias="0.122" />

    <EditText
        android:id="@+id/idEdtLastName"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:autofillHints="lastName"
        android:hint="@string/enter_last_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdtFirstName"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/idEdtUserName"
        android:layout_marginBottom="40dp"
        android:autofillHints="firstName"
        android:hint="@string/enter_first_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        app:layout_constraintBottom_toBottomOf="@+id/idEdtLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_below="@id/idEdtPassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="63dp"
        android:backgroundTint="#31998D"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@id/idBtnBack"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_below="@+id/idBtnBack"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#31998D"
        android:text="@string/back_to_login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idEdtPassword"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="112dp"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/inventory_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728"
        app:srcCompat="@drawable/delivery_inventory_icon" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="237dp"
        android:layout_height="296dp"
        android:contentDescription="@string/inventory_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786"
        app:srcCompat="@drawable/icons8_warehouse_96" />

</androidx.constraintlayout.widget.ConstraintLayout>