<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E4E4"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/idHeader"
        android:layout_width="284dp"
        android:layout_height="93dp"
        android:gravity="center_horizontal"
        android:padding="25dp"
        android:text="@string/instock_app"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/idEdtUserName"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/idHeader"
        android:layout_marginBottom="556dp"
        android:autofillHints="username"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idHeader"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/idEdtPassword"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/idEdtUserName"
        android:layout_marginBottom="500dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtUserName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_below="@id/idEdtPassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="63dp"
        android:autofillHints="password"
        android:backgroundTint="#31998D"
        android:textColor="@color/black"
        android:hint="@string/enter_password"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idBtnCreateLogin"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idEdtPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/idBtnCreateLogin"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_below="@id/idEdtPassword"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="424dp"
        android:backgroundTint="#31998D"
        android:textColor="@color/black"
        android:text="@string/create_account"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idEdtPassword"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="112dp"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/inventory_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728"
        app:srcCompat="@drawable/delivery_inventory_icon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="237dp"
        android:layout_height="296dp"
        android:contentDescription="@string/inventory_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786"
        app:srcCompat="@drawable/icons8_warehouse_96" />


</androidx.constraintlayout.widget.ConstraintLayout>