<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E4E4"
    tools:context=".CItemsActivity">

    <TextView
        android:id="@+id/idAddItems"
        android:layout_width="284dp"
        android:layout_height="93dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:padding="25dp"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdtItem"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginBottom="556dp"
        android:autofillHints="item"
        android:hint="@string/enter_item"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/idEdtQuantity"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginBottom="500dp"
        android:autofillHints="password"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintTextFieldSize" />
    <Button
        android:id="@+id/idBtnAddItem"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="63dp"
        android:backgroundTint="#31998D"
        android:text="@string/add_item"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@id/idBtnBack1"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_below="@+id/idBtnBack1"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="436dp"
        android:backgroundTint="#31998D"
        android:text="@string/back_to_inventory"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>